refactor: ingredient 폴더 까지 진행
- Ingredient 관련 코드 리팩터링 진행
- Async, Transaction이 사용되는 메소드에서 프록시를 통해 특성을 유지한 상태로 작업 보장
- repository의 querydsl 부분에 개선점이 있으나 직접 작업한 부분이 아니어서 보류함함

S12P21S003-241